Fix issues detected by sonarqube